// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toEndWith fails when string ends with given suffix 1`] = `
"expect(received).not.toEndWith(expected)

Expected string to not end with:
  \\"world\\"
Received:
  \\"hello world\\""
`;

exports[`.toEndWith fails when string does not end with the given suffix 1`] = `
"expect(received).toEndWith(expected)

Expected string to end with:
  \\"hello\\"
Received:
  \\"hello world\\""
`;

exports[`.toEndWith fails when the string is shorter than the given suffix 1`] = `
"expect(received).toEndWith(expected)

Expected string to end with:
  \\"hello world\\"
Received:
  \\"hello\\""
`;
